Fix CSS style clipping the search bar. Fixes #464.

--- a/static/v2/css/style.css
+++ b/static/v2/css/style.css
@@ -87,7 +87,7 @@ main{
 
 body{
   /* offset the body for the fixed header */
-  padding-top: 56px;
+  padding-top: 76px;
 }
 
 .site-header{
